<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">minipro</string>
    <string name="Login">Login</string>
    <string name="Email">Email</string>
    <string name="Password">Password</string>
    <string name="Register">Register</string>
    <string name="name">Name</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="title_activity_home">home</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="register_here">Register Here! </string>
    <string name="language">Language</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="add">Add</string>
    <string name="subject">Subject</string>
    <string name="salary">Salary</string>]
    <string name="phone_number">Phone Number</string>
    <string name="position">Position</string>
    <string name="class_es">Class(es)</string>
    <string name="cancel">Cancel</string>
    <string name="about">About</string>
    <string name="logout">Logout</string>
    <string name="penjelasan">Aplikasi yang dibuat adalah aplikasi tentang data karyawan di perusahaan aplikasi bisa login dan logut, bisa memakai dark mode dan mengubah bahasa lalu dapat menambah form untuk menambahkan data karyawan proses sangat susah karena waktu yang sempit dan juga fitur yang susah, saya kerjakan sendiri karena tidak ingin menggangu org ups and down = setelah login dan register dan dark mode bersih dia ngehank pas di language, language juga tidak bisa berubah karena masih belum mengerti betul pake spinnerujiannya terlalu susah untuk waktu 2 hari.saran, mungkin bisa kalau waktunya 3-4 hari</string>
    <string name="bek">bek</string>


    <string-array name="langEng">
        <item>Engslih</item>
        <item>Indonesia</item>
    </string-array>
</resources>
